<resources>
    <string name="app_name">flatstackTestTask</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="track_name">Track Name</string>
    <string name="artists">Artists</string>
    <string name="play_on_spotify">PLAY ON SPOTIFY</string>
    <string name="login_with_spotify">LOGIN WITH SPOTIFY</string>
    <string name="greetings">GREETINGS FLATSTACK! THIS IS MY TEST APP</string>
    <string name="description">To use this app You need spotify account!</string>
    <string name="splash_background">Splash Background</string>
    <string name="spotify_logo">Spotify Logo</string>
    <string name="album_poster">Album Poster</string>
    <string name="user_name">User Name</string>
    <string name="user_image">User Image</string>
</resources>