<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/spotify_logo_image_view"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:scaleX="0.7"
            android:scaleY="0.7"
            style="@style/SpotifyLogo"
            android:contentDescription="@string/spotify_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/track_poster_image_view"
            app:layout_constraintStart_toStartOf="@id/track_poster_image_view"
            app:layout_constraintEnd_toEndOf="@id/track_poster_image_view"/>

        <ImageView
            android:id="@+id/track_poster_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/album_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spotify_logo_image_view"/>

        <TextView
            android:id="@+id/track_name_text_view"
            style="@style/TextStyle.SecondaryHeading"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/track_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_poster_image_view" />

        <TextView
            android:id="@+id/track_artists_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="@style/TextStyle.Description"
            android:maxLines="1"
            android:text="@string/artists"
            app:layout_constraintTop_toBottomOf="@id/track_name_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>